testData/annotator/InvalidPackage/InvalidPackageTestData.secarc
<warning descr="Package directive does not match files location">package abc.def</warning>;

component A {

    accesscontrol on;
}